--- a/Shortcuts/it.lproj/Localizable.strings
+++ b/Shortcuts/it.lproj/Localizable.strings
@@ -9,16 +9,16 @@
  
 /*Settings Pane Translation*/
 "CONFIGURATION" = "Configuration";
-"ENABLE" = "Enable";
-"MAKERS" = "Makers";
-"SUPPORT" = "Support";
+"ENABLE" = "Abilita";
+"MAKERS" = "Creatori";
+"SUPPORT" = "Supporto";
 
 /*Tweak Strings*/
-"Add New Cydia Repo" = "Aggiungi Una Nuova Sorgente";
+"Add New Cydia Repo" = "Aggiungi Nuova Sorgente";
 "Add Source" = "Nuova Sorgente";
 "High:" = "Massima:";
 "Low:" = "Minima:";
-"Play/Pause" = "Play/Pausa";
+"Play/Pause" = "Riproduci/Pausa";
 "Power Off" = "Spegni";
 "Put Device In SafeMode" = "Riavvia in SafeMode";
 "Quick Restart Device" = "Riavvia Springboard";
@@ -26,11 +26,11 @@
 "Respring" = "Respring";
 "Restart Device" = "Riavvia Dispositivo";
 "SafeMode" = "SafeMode";
-"Shortcuts Weather Icon" = "Icona Meteo Shortcuts";
+"Shortcuts Weather Icon" = "Icona Shourtcuts Meteo";
 "Shuffle Music" = "Riproduzione Casuale";
 "Shuffle Now Playing Music" = "";
-"Skip Back" = "Indietro";
+"Skip Back" = "Precedente";
 "Skip Forward" = "Successivo";
-"Skip to the next song" = "Riproduci il brano successivo";
-"Skip to the previous song" = "Riproduci il brano precedente";
+"Skip to the next song" = "Riproduci brano successivo";
+"Skip to the previous song" = "Riproduci brano precedente";
 "Turn Device Off" = "Spegni il Dispositivo";
