--- a/Shortcuts/it.lproj/Localizable.strings
+++ b/Shortcuts/it.lproj/Localizable.strings
@@ -14,23 +14,42 @@
 "SUPPORT" = "Support";
 
 /*Tweak Strings*/
-"Add New Cydia Repo" = "Aggiungi Una Nuova Sorgente";
+"Add New Cydia Repo" = "Aggiungi Nuova Sorgente";
 "Add Source" = "Nuova Sorgente";
 "High:" = "Massima:";
 "Low:" = "Minima:";
-"Play/Pause" = "Play/Pausa";
+"Play/Pause" = "Riproduci/Ferma";
 "Power Off" = "Spegni";
+"Power Off Confirmation" = "Spengo il Dispositivo?";
 "Put Device In SafeMode" = "Riavvia in SafeMode";
 "Quick Restart Device" = "Riavvia Springboard";
 "Reboot" = "Riavvia";
+"Reboot Confirmation" = "Riavvio il Dispositivo?";
 "Respring" = "Respring";
+"Respring Confirmation" = "Riavvio la Springboard?";
 "Restart Device" = "Riavvia Dispositivo";
 "SafeMode" = "SafeMode";
-"Shortcuts Weather Icon" = "Icona Meteo Shortcuts";
+"SafeMode Confirmation" = "Entro in moalità SafeMode?";
+"Shortcuts Weather Icon" = " Shortcuts Icona Meteo";
 "Shuffle Music" = "Riproduzione Casuale";
 "Shuffle Now Playing Music" = "";
-"Skip Back" = "Indietro";
+"Skip Back" = "Precedente";
 "Skip Forward" = "Successivo";
-"Skip to the next song" = "Riproduci il brano successivo";
-"Skip to the previous song" = "Riproduci il brano precedente";
+"Skip to the next song" = "Riproduci brano successivo";
+"Skip to the previous song" = "Riproduci brano precedente";
 "Turn Device Off" = "Spegni il Dispositivo";
+"Toggle Power Save" = "Toggle Risparmio Energetico";
+"Toggle Wifi-Calling" = "Toggle Chiamata Wi-Fi"; 
+"Use Celsius" = "Usa Gradi Celsius";
+"Use Confirmation" = "Avviso di Conferma";
+"Use Kelvin" = "Use Gradi Kelvin";
+"Weather Icon Footer" = "Assicurati che le impostazioni di Localizazzione per l'app Meteo  siano attive"; 
+"Settings Icon" = "Icona Impostazioni";
+"Shortcut Item 1" = "Shortcut 1"; 
+"Shortcut Item 2" = "Shortcut 2"; 
+"Shortcut Item 3" = "Shortcut 3";
+"Shortcut Item 4" = "Shortcut 4";
+"Stocks Icon Footer" = "Attualmente supporta un solo valore alla volta, altri verranno aggiunti Presto.Si consiglia di usare il valore di borsa nel simbolo e formato corretto";
+"Base Exchange" = "Cambio base";
+"Comparison Exchange" = "Comparazione del Cambio";
+"Not Right Now" = "Non Al Momento";
